# latemp

./: .appveyor.yml  .gitignore  .hgignore  .travis.yml  README.md
CI-testing/: continuous-integration-testing.pl
Perl/modules/Bundle-Latemp/: Changes  Latemp.pm  MANIFEST  META.yml  Makefile.PL  README
Perl/modules/Bundle-Latemp/lib/Bundle/: Latemp.pm
Perl/modules/Bundle-Latemp/t/: 00-load.t
Perl/modules/HTML-Latemp-GenMakeHelpers/: .tidyallrc  Build.PL  Changes  MANIFEST  README  dist.ini
Perl/modules/HTML-Latemp-GenMakeHelpers/examples/: shlomifish.org-gen-helpers.pl
Perl/modules/HTML-Latemp-GenMakeHelpers/scripts/: tag-release.pl
Perl/modules/HTML-Latemp-GenMakeHelpers/t/: 01-output-basic.t
Perl/modules/HTML-Latemp-NavLinks-GenHtml/: .tidyallrc  Build.PL  Changes  MANIFEST  Makefile.PL  README  dist.ini
Perl/modules/HTML-Latemp-NavLinks-GenHtml/examples/: HTML-Widgets-NavMenu.pl
Perl/modules/HTML-Latemp-NavLinks-GenHtml/scripts/: tag-release.pl
Perl/modules/HTML-Latemp-NavLinks-GenHtml/t/: 00-load.t  01-run.t
Perl/modules/HTML-Latemp-News/: .tidyallrc  Build.PL  Changes  MANIFEST  README  dist.ini
Perl/modules/HTML-Latemp-News/t/: style-trailing-space.t
Perl/modules/Task-Latemp/: Build.PL  Changes  MANIFEST  META.yml  Makefile.PL  README  dist.ini
Perl/modules/Task-Latemp/lib/Task/: Latemp.pm
Perl/modules/Task-Sites-ShlomiFish/: Build.PL  Changes  MANIFEST  META.yml  Makefile.PL  tag-release.pl
Perl/modules/Template-Preprocessor-TTML/: .cvsignore  Build.PL  Changes  MANIFEST  README  TODO  dist.ini
Perl/modules/Template-Preprocessor-TTML/docs/: TTML-Spec.txt
Perl/modules/Template-Preprocessor-TTML/t/: 00-load.t  01-cmdline-proc.t  02-main.t
Test-Sites/css-zen-test/: Makefile  params-latemp.yml  template.wml
Test-Sites/css-zen-test/lib/: MyNavData.pm
Test-Sites/css-zen-test/src/common/: style.css
Test-Sites/css-zen-test/src/mysite/: index.html.wml
installer/: CMakeLists.txt  COPYING  Changes  Common.cmake  INSTALL  README  SConsfile  SConstruct  TODO  Tatzer  disttar.py  latemp-config.pl  latemp-setup  latemp-setup.pl
installer/Autoscons/: AutoBuild.py  Builder.py  Configure.py  Util.py  __init__.py
installer/Autoscons/Template/: __init__.py
installer/Autoscons/Tool/: __init__.py  gzip.py
installer/cmake/: preprocess-prefix-and-version.pl
installer/docs/: latemp-ref.pod  render.pl
installer/wml/latemp/: h-w-nav-menu.wml  html-head-tag.wml  html-header.wml  latemp-driver.wml  latemp-main.wml  latemp-prelude.wml  news-management.wml  template-params.wml  texts.wml  utils.wml
installer/wml/latemp/themes/better-scm/: template.wml
installer/wml/latemp/themes/css-zen-garden/: template.wml
installer/wml/latemp/themes/perl-begin-1/: template.wml
installer/wml/latemp/themes/sinorca-2.0/: template.wml
multi-host-site/: Makefile  TODO  gen-helpers.pl  template.wml
multi-host-site/HTML/Latemp/: GenMakeHelpers.pm
multi-host-site/lib/: MyNavData.pm
multi-host-site/lib/latemp/: h-w-nav-menu.wml  html-head-tag.wml  html-header.wml  latemp-main.wml  template-params.wml  texts.wml
multi-host-site/lib/latemp/themes/better-scm/: template.wml
multi-host-site/src/common/: print.css  style.css
multi-host-site/src/docs/: nice_trys.html.wml  shlomif-evolution.html.wml
multi-host-site/src/irc/: index.html.wml
multi-host-site/src/site-map/: index.html.wml
multi-host-site/src/source/: index.html.wml
multi-host-site/src/subversion/: Subversion-Win32-Installation-Guide.txt
multi-host-site/src/t2/: index.html.wml  links.html.wml  mailing-list.html.wml
multi-host-site/src/t2/alternatives/: index.html.wml
multi-host-site/src/t2/arch/: index.html.wml
multi-host-site/src/t2/irc/: index.html.wml
multi-host-site/src/t2/site-map/: index.html.wml
multi-host-site/src/t2/source/: index.html.wml
multi-host-site/src/vipe/docs/: index.html.wml  nice_trys.html.wml  shlomif-evolution.html.wml
multi-host-site/src/vipe/subversion/: Subversion-Win32-Installation-Guide.txt  Svn-Win32-Inst-Guide.html.wml  compelling_alternative.html.wml  index.html.wml
sample-site/: Makefile  TODO  add-timestamps.sh  gen-helpers.pl  include.mak  template.wml  test.pl
sample-site/lib/: MyNavData.pm  h-w-nav-menu.wml  html-head-tag.wml  template-params.wml  texts.wml
sample-site/lib/deprecated/: bk-note.wml
sample-site/lib/latemp/: affiliations.wml  h-w-nav-menu.wml  licensing.wml  template-params.wml  texts.wml
sample-site/lib/latemp/themes/better-scm/: template.wml
sample-site/lib/themes/better-scm/: template.wml
sample-site/src/: index.html.wml  links.html.wml  mailing-list.html.wml  style.css
sample-site/src/alternatives/: index.html.wml
sample-site/src/arch/: index.html.wml
sample-site/src/docs/: index.html.wml  nice_trys.html.wml  shlomif-evolution.html.wml
sample-site/src/irc/: index.html.wml
sample-site/src/site-map/: index.html.wml
sample-site/src/source/: index.html.wml
sample-site/src/subversion/: Subversion-Win32-Installation-Guide.txt  Svn-Win32-Inst-Guide.html.wml  compelling_alternative.html.wml  index.html.wml
site/wml/: Makefile  TODO  gen-feeds.pl  gen-helpers.pl  template.wml
site/wml/Images/logo/: Notes.txt
site/wml/Tests/: valid-html-tidy--stricter.t
site/wml/lib/: MyManageNews.pm  MyNavData.pm  MyNavLinks.pm
site/wml/src/common/: alternate1.css  alternate1.css.ttml  style.css  style.css.ttml
site/wml/src/mysite/: index.html.wml
site/wml/src/mysite/about/: index.html.wml
site/wml/src/mysite/docs/: index.html.wml
site/wml/src/mysite/download/: index.html.wml  latemp-0.10.0.tar.xz  latemp-0.10.1.tar.xz  latemp-0.10.2.tar.xz  latemp-0.12.0.tar.xz  latemp-0.8.0.tar.xz
site/wml/src/mysite/examples/: index.html.wml
site/wml/src/mysite/graphics/: index.html.wml
support-headers/: install.pl
support-headers/lib/: nav_links.ttml
support-headers/lib/shlomif/: better-scm-common-styles.ttml  common_defs.ttml  navbar.ttml  note.ttml  products-syndication.ttml
support-headers/lib/shlomif/sheets/: better-scm-kitchy.ttml  better-scm-normal.ttml
(+17 files in other folders)
